--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ mybatis.type-aliases-package=com.example.testforpgsql.mybatis.entity
 # 应用服务 WEB 访问端口
 server.port=8080
 
-spring.datasource.url=jdbc:postgresql://81.68.150.201:5432/postgres
-spring.datasource.username=postgres
-spring.datasource.password=rsWeNHeGRhBPNzAb
+spring.datasource.url=jdbc:postgresql://ip/postgres
+spring.datasource.username=
+spring.datasource.password=
 spring.datasource.driver-class-name=org.postgresql.Driver
 
